# local-mac-skills-Claude-Code

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  WIKI_CHANGELOG.md  WIKI_GOLD.md  WIKI_LIFE_OS.md  WIKI_QUALITY.md  WIKI_VAULT_STRUCTURE.md  local-mpc  mcp_server.py  music_config.sh  pyproject.toml  safari_config.sh  spotify_config.sh  ssh_config.sh
docs/: CALENDAR_MIGRATION_EVALUATION.md  CALENDAR_QUERY_TOOL.md
local-mac-mcp/: Package.swift  build.sh
local-mac-tool/: Package.swift  build.sh
skills/gc-gp/: SKILL.md
src/: config.py  db.py  market_pulse.py  news_agent.py  portfolio_state.py  realtime_quotes_agent.py  swift_bridge.py  tools.py
tests/: requirements-experimental.txt  test_agent_responses.py  test_connection_pool.py  test_connection_pool.sh  test_connection_pool_fast.py  test_connection_pool_stress.py  test_parallel_dispatch.py  test_setup.sh  test_swift_binary.sh  test_tools.sh
tools/: apfel_mac-narrator.sh  calendar_add_event.sh  calendar_delete_event.sh  calendar_list_events.sh  contacts_cache_update.sh  contacts_search.sh  context_snapshot.sh  convert_to_audio.sh  docker_cleanup.sh  docker_local_compose.sh  docker_local_logs.sh  docker_local_ps.sh  docker_local_stats.sh  finder_control.sh  finder_read.sh  git_local.sh  imessage_check.sh  imessage_command_executor.sh  imessage_send.sh  lookup_cached_contacts.py  mail_fetch_inbox.sh  mail_list_accounts.sh  mail_read_email.sh  market_live_prices.sh  music_control.sh  music_play.sh  network_curl.sh  network_dns.sh  network_listen.sh  network_ping.sh  network_port.sh  notes_add.sh  notes_delete.sh  notes_list.sh  notes_read.sh  notify.sh  obsidian_backlinks.sh  obsidian_delete.sh  obsidian_links.sh  obsidian_list.sh  (+38 more)
wiki/: EXECUTION_MODEL_WIKI.md  FUTURE_SKILLS.md  GUARDRAILS_WIKI.md  QUALITY_WIKI.md  SKILLS_WIKI.md  TOOLS_WIKI.md  WIKI_HOME.md
(+83 files in other folders)
