[project]
name = "claude-for-mac-local"
version = "0.1.0"
description = "Local macOS skills MCP server (Swift CLI bridge + vault)"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "fastmcp>=0.1.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
test = [
    "deepeval>=1.0.0",
    "pytest>=7.0.0",
    "pytest-xdist>=3.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["src"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
